[package]
name = "sinex"
version = "0.3.0"
license = "MIT OR Apache-2.0"
authors = ["Guillaume W. Bres <guillaume.bressaix@gmail.com>"]
description = "SINEX file parsing and analysis"
homepage = "https://github.com/georust/rinex/sinex"
repository = "https://github.com/georust/rinex/sinex"
keywords = ["sinex", "timing", "gps", "glonass", "galileo"]
categories = ["science", "science::geo", "parsing"]
edition = "2021"
readme = "README.md"

[features]

[build-dependencies]

[dependencies]
thiserror = "1"
strum_macros = "0.26"
strum = { version = "0.26", features = ["derive"] }
gnss-rs = { version = "2.1.2", features = ["serde"] }
hifitime = { version = "3.9.0", features = ["serde", "std"] }
